--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
         "rest",
         "api"
     ],
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "homepage": "https://openapi-generator.tech",
     "license": "unlicense",
     "authors": [
