--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "xendit/xendit-php",
+    "name": "bry221996/xendit-php",
     "version": "6.0.0",
     "description": "Xendit PHP SDK",
     "keywords": [
